# infraguard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: plan_risk_demo.json  tag_policy.yaml
src/infraguard/: __init__.py  __main__.py  cli.py
src/infraguard/common/: __init__.py  config.py  models.py  reporter.py  severity.py
src/infraguard/iam_check/: __init__.py  analyzer.py  checks.py  command.py  rules.py
src/infraguard/plan_risk/: __init__.py  command.py  parser.py  rules.py  scorer.py
src/infraguard/tag_audit/: __init__.py  command.py  evaluator.py  rules.py  scanner.py
tests/: conftest.py
tests/fixtures/aws/: tagged_resources.json
tests/fixtures/iam/: least_privilege_policy.json  overpermissive_policy.json
tests/fixtures/terraform/: mixed_changes.json  simple_create.json
tests/test_iam_check/: test_analyzer.py  test_checks.py
tests/test_plan_risk/: test_parser.py  test_scorer.py
tests/test_tag_audit/: test_evaluator.py  test_scanner.py
